# openvtuber-rs

./: .gitignore  Cargo.toml  README.md
examples/: face_alignment.rs  face_detection.rs  head_pose.rs
src/: alignment.rs  consts.rs  detection.rs  error.rs  head_pose_estimation.rs  lib.rs  opencv_utils.rs  types.rs  utils.rs
