[package]
name = "openvtuber-rs"
version = "0.1.3"
authors = ["orzogc <orzogc@163.com>"]
description = "Rust port of OpenVtuber"
homepage = "https://github.com/orzogc/openvtuber-rs"
repository = "https://github.com/orzogc/openvtuber-rs"
readme = "README.md"
categories = ["computer-vision"]
keywords = ["vtuber", "face-detection", "face-alignment"]
license = "GPL-3.0-only"
edition = "2018"
exclude = ["examples/assets/*", "models/*"]

[dependencies]
image = { version = "0.23.14", default-features = false }
ndarray = "0.15.1"
opencv = { version = "0.52.0", features = ["clang-runtime"] }
tflite = "0.9.5"
thiserror = "1.0.24"

[[example]]
name = "face_detection"

[[example]]
name = "face_alignment"

[[example]]
name = "head_pose"
